syntax = "proto3";

package oss.v1;

option go_package = "github.com/aureate7/mini-oss/service_proto/pb/oss/v1;ossv1";

import "google/protobuf/timestamp.proto";

enum UploadSessionStatus {
  UPLOAD_SESSION_STATUS_UNSPECIFIED = 0;
  UPLOAD_SESSION_STATUS_UPLOADING   = 1;
  UPLOAD_SESSION_STATUS_COMPLETED   = 2;
  UPLOAD_SESSION_STATUS_ABORTED     = 3;
}

message UploadSession {
  string object_id = 1;
  string upload_id = 2;
  string file_name = 3;
  uint64 file_size = 4;
  uint32 chunk_size = 5;
  uint64 offset = 6;
  UploadSessionStatus status = 7;

  string sha256 = 8; // 幂等匹配
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  google.protobuf.Timestamp expires_at = 11;
}


message CreateUploadSessionRequest {
  string idempotency_key = 1;
  string object_id = 2;
  string file_name = 3;
  uint64 file_size = 4;
  uint32  preferred_chunk = 5;

  string sha256 = 6; // 幂等性校验
}

message GetUploadSessionRequest {
  string upload_id = 1;
//  string idempotency_key = 2;
}
message CreateUploadSessionResponse {
  UploadSession session = 1;
  bool reused = 2;
}

message GetUploadSessionResponse {
  UploadSession session = 1;
}

service UploadSessionService {
  rpc CreateUploadSession (CreateUploadSessionRequest) returns (CreateUploadSessionResponse){}
  rpc GetUploadSession (GetUploadSessionRequest) returns (GetUploadSessionResponse){}
}